# webdata-cli

./: .gitignore  AI_INTEGRATION_GUIDE.md  LICENSE  README.md  WEBDATA_GUIDE.md  install.py  pyproject.toml  requirements.txt  webdata.py
